--- a/app/views/visitors/index.html.haml
+++ b/app/views/visitors/index.html.haml
@@ -1,14 +1,18 @@
 %h1 Survey
 
-%table.table.table-striped
-  %tbody
-    - if current_user
+- if current_user
+  %table{:class => "table table-striped", :id=>"example",:cellspacing=>"0", :width=>"100%"}
+    %thead
+      %tr
+        %th Question
+    %tbody
       - @questions.each do |q|
         %tr
           %td= q.question
         %tr
-          %td= rating_for q, "answer", :enable_half => true, :half_show => true, :disable_after_rate => false
+          %td= rating_for q, "answer", :enable_half => true, :half_show => true
+- else
+  %p Please log in to see the survey
+
+    
   
-        
-%button.btn.btn-success
-  Send
